# Otus_projects

./: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  CMakeLists.txt  TransactionData.h  main.cpp
